# evil_lumios

./: .dockerignore  .railway.toml  Cargo.toml  Docker-compose.yml  Dockerfile  Makefile.toml  README.md  diesel.toml  docker-entrypoint.sh  entrypoint.sh  nixpacks.toml
.github/workflows/: docker-build.yml
migrations/2025-01-15-192932_initial_setup/: down.sql  up.sql
src/: cron.rs  lib.rs  main.rs  schema.rs  state.rs
src/api/: clicker.rs  gamble.rs  health.rs  mod.rs  stats.rs
src/bot/: event_handler.rs  externsions.rs  handler.rs  mod.rs
src/bot/callbacks/: mod.rs  queue.rs  queue_callbacks.rs  stats.rs  stats_callbacks.rs
src/bot/chat/: mod.rs
src/bot/events/: cleanup.rs  gamble.rs  mod.rs  notification.rs
src/bot/general/: commands.rs  message_handler.rs  mod.rs
src/bot/inline/: config.toml  dck_random.rs  gender.rs  mod.rs  pair_random.rs  polyana.rs  utils.rs  zrada.rs
src/bot/queues/: commands.rs  mod.rs
src/bot/stats/: commands.rs  gifs.rs  mod.rs  reactions.rs
src/bot/timetable/: commands.rs  external.rs  mod.rs  schedule.rs  (+1 more)
src/clients/: gemini.rs
src/config/: commands.rs  state.rs
src/db/: chat.rs  gamble.rs  migration.rs  mod.rs  models.rs  queue.rs  setup.rs  stats.rs  timetable.rs  user.rs
src/entities/: chats.rs  gambles.rs  mod.rs  prelude.rs  queue_users.rs  queues.rs  timetable_entries.rs  timetables.rs  user_stats.rs  users.rs
src/models/: chat.rs  gamble.rs  mod.rs  queue.rs  stats.rs  timetable.rs  user.rs
src/redis/: mod.rs  setup.rs
src/repositories/: gamble_repository.rs  mod.rs  setup.rs  user_repository.rs
(+13 files in other folders)
