[package]
name = "evil_lumios"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.0"
dotenvy = "0.15"
chrono = { version = "0.4.39", features = ["serde"] }
teloxide = { version = "0.13.0", features = ["full"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8.10"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.95"
async-trait = "0.1.85"
rand = "0.8.5"
tokio-cron-scheduler = "0.13.0"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "fmt",
  "env-filter",
  "chrono",
] }
toml = "0.8.19"
redis = "0.28.2"
